--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 0.5vw;
 }
 
 ::-webkit-scrollbar-track {
@@ -44,81 +44,18 @@ body {
 }
 
 h1 {
-    font-size: 64px;
+    font-size: 3rem;
     font-weight: bold;
 }
 
 p {
-    font-size: 28px;
+    font-size: 1rem;
     font-weight: medium;
 }
 
 a {
     color: var(--c-accent);
     text-decoration: none;
-}
-
-.btn {
-    background-color: var(--c-accent);
-    color: var(--c-background);
-    border-radius: 15px;
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-    padding: 10px 40px;
-    cursor: pointer;
-}
-
-.ic-material {
-  font-family: 'Material Symbols Outlined';
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 700,
-  'GRAD' 0,
-  'opsz' 48
-}
-
-.btn-small {
-    background-color: var(--c-accent);
-    color: var(--c-background);
-    border-radius: 12px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 6px 30px;
-    cursor: pointer;
-}
-
-.cardDescription {
-    color: rgb(116, 116, 116);
-    font-size: 16px;
-    font-weight: 100;
-}
-
-.btn-thin {
-    color: var(--c-foreground);
-    border-radius: 15px;
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-    padding: 10px 40px;
-    cursor: pointer;
-}
-
-.badge-text {
-    background-color: var(--c-vista-blue);
-    background: var(--gradient);
-    color: var(--c-accent-dark);
-    padding: 5px;
-    border-radius: 5px;
-    margin-right: 10px;
-    font-weight: bold;
-}
-
-.api-links {
-    margin: 25px;
-    padding: 25px;
-    padding-bottom: 68px;
 }
 
 .fg-red {
@@ -130,22 +67,17 @@ a {
 }
 
 .navbar {
-    padding: 25px;
+    padding: 4vh;
 }
 
 .navbar-main {
     display: flex;
-    max-height: 140px;
+    max-height: 15vh;
     align-items: center;
 }
 
 .navbar-brand img {
-    width: 250px;
-}
-
-.navbar-btns {
-    position: absolute;
-    right: 25px;
+    width: 25vh;
 }
 
 .content {
@@ -153,46 +85,6 @@ a {
     top: 75%;
     transform: translateY(-50%);
     width: 100%;
-    max-height: 840px;
-    padding-bottom: 68px;
+    max-height: 90vh;
     text-align: center;
-}
-
-.authCard {
-    background: var(--c-background-light);
-    padding: 48px;
-    width: 30%;
-    border-radius: 24px;
-    font-family: 'Inter', sans-serif;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: 24px;
-}
-
-.textInput {
-    background: var(--c-background);
-    padding: 14px;
-    border-radius: 16px;
-    font-family: 'Inter', sans-serif;
-    width: 80%;
-    border: transparent;
-    color: var(--c-foreground);
-}
-
-.footer {
-    position: fixed;
-    bottom: 0px;
-    width: 100%;
-    background-color: var(--c-background-dark);
-    list-style-type: none;
-    padding: 25px 0;
-}
-
-.footer li {
-    float: left;
-    text-align: center;
-    margin-left: 25px;
 }
